--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Our Team</title>
 </head>
+
 <body>
     <div class="container">
 
 
+    </div>
+    <div class="container">
+        <h2 class="text-center mt-4">Inserisci i tuoi dati</h2>
+        <div class="input-group d-flex justify-content-between align-items-center mt-4">
+            <input class="form-control " type="text" id="nome" value="" placeholder="Inserisci il nome">
+            <input class="form-control  " type="text" id="ruolo" value="" placeholder="Inserisci il ruolo">
+            <input class="form-control" type="file" id="foto-user" value="" placeholder="Carica foto">
+        </div>
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-success mt-4 ">Join us</button>
+        </div>
+        
     </div>
 
 
@@ -18,4 +33,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
