html decoration and add reset function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="container">
+        <h1 class="text-center mb-5 mt-2 display-6">Our team</h1>
 
 
     </div>
@@ -27,6 +28,7 @@
         </div>
         
     </div>
+
 
 
 
