--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <h1 class="text-center mb-5 mt-2 display-6">Our team</h1>
+        <p class="text-center mb-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, consectetur! Sed exercitationem repellendus autem corrupti, dicta odio asperiores provident veritatis.</p>
 
 
     </div>
